2006-04-22  Eli Zaretskii  <eliz@gnu.org>

	* puresize.h (BASE_PURESIZE): Increase to 1205000.

2006-04-21  Kim F. Storm  <storm@cua.dk>

	* xdisp.c (redisplay_window): Fix last change.  Don't recenter if
	window start is at BEGV.

	* dispextern.h (struct image): New member `corners'.
	(TOP_CORNER, LEFT_CORNER, BOT_CORNER, RIGHT_CORNER): New macros.

	* image.c (four_corners_best): New arg CORNERS specifies what pixels
	to look at in case image has margin.
	(x_create_bitmap_mask): Pass NULL for CORNERS to four_corners_best.
	(image_background, image_background_transparent)
	(x_build_heuristic_mask): Pass img->corners to four_corners_best.
	(gif_load): Set img->corners according to image's margin spec.
	Use img->corners values directly where applicable.
	Save image extension data in img->data.lisp_val.
	(gif_clear_image): New function to free img->data.lisp_val.
	(gif_type): Use it instead of generic x_clear_image.
	(Fimage_extension_data): New defun.
	(syms_of_image): Defsubr it.

2006-04-21  John Sullivan  <john@wjsullivan.net>  (tiny change)

	* window.c (Fdisplay_buffer): Doc fix.

2006-04-21  Eli Zaretskii  <eliz@gnu.org>

	* s/ms-w32.h (SYSTEM_PURESIZE_EXTRA): Increase to 25000.

2006-04-21  YAMAMOTO Mitsuharu  <mituharu@math.s.chiba-u.ac.jp>

	* image.c [MAC_OS] (xpm_load_image): Fill in background field
	while we have ximg handy.

	* macmenu.c (restore_menu_items, save_menu_items): New functions
	from xmenu.c.
	(set_frame_menubar, digest_single_submenu): Apply 2006-04-18
	changes for xmenu.c.

	* macterm.c (x_per_char_metric): Return NULL if glyph width is 0.
	(add_mac_font_name): New function.
	(init_font_name_table): Use it.  Adopt the first found font from
	those having the same family name.

2006-04-21  Nick Roberts  <nickrob@snap.net.nz>

	* xdisp.c (note_mouse_highlight): Use build_string.

2006-04-20  Lars Hansen  <larsh@soem.dk>

	* textprop.c (Fremove_list_of_text_properties): Ensure
	modify_region is called only when buffer is modified and that